--- a/src/Plugin/packages.config
+++ b/src/Plugin/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="cef.redist.x64" version="83.4.2" targetFramework="net472" />
+  <package id="cef.redist.x86" version="83.4.2" targetFramework="net472" />
+  <package id="CefSharp.Common" version="83.4.20" targetFramework="net472" />
+  <package id="CefSharp.WinForms" version="83.4.20" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="System.Drawing.Common" version="6.0.0" targetFramework="net472" />
 </packages>
