--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Unbroken.LaunchBox.Plugins">
+      <HintPath>..\..\..\..\..\LaunchBox\Core\Unbroken.LaunchBox.Plugins.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IExtractor.cs" />
