--- a/src/Plugin/Plugin.csproj
+++ b/src/Plugin/Plugin.csproj
@@ -119,10 +119,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="LaunchBoxDataBackup.cs" />
+    <Compile Include="Rom.cs" />
     <Compile Include="SystemEvents.cs" />
     <Compile Include="SystemMenuItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Updater.cs" />
+    <Compile Include="Wildcard.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
