--- a/src/Plugin/packages.config
+++ b/src/Plugin/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ini-parser" version="2.5.2" targetFramework="net472" />
+  <package id="ObjectListView.Official" version="2.9.1" targetFramework="net472" />
   <package id="Octokit" version="0.50.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="6.0.0" targetFramework="net472" />
 </packages>
