--- a/src/Plugin/Plugin.csproj
+++ b/src/Plugin/Plugin.csproj
@@ -124,6 +124,7 @@
     <Compile Include="SystemEvents.cs" />
     <Compile Include="SystemMenuItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Texture.cs" />
     <Compile Include="Updater.cs" />
     <Compile Include="UserInterface.cs" />
     <Compile Include="Wildcard.cs" />
