--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -103,6 +103,7 @@
     <Compile Include="DiskUtils.cs" />
     <Compile Include="PathUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Wildcard.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
